# Zadanie

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parseQuantity.cpp  parseQuantity.h
